--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -50,10 +50,10 @@ jobs:
           python-version: "3.10"
 
       - name: Install Dependencies 🔮
-        run: pip3 install poetry
+        run: pip3 install poetry && poetry install --extras "codestyle"
 
       - name: Lint Viridian Algae 🧪
-        run: make lint-algae
+        run: poetry poe -C viridian/algae lint
 
   caerulean-whirlpool-lint:
     name: Lint Caerulean Whirlpool Server
