--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -91,8 +91,7 @@ jobs:
       - name: Install Dependencies 🔮
         run: |
           npm install --prefix .github/scripts
-          pip3 install poetry
-          poetry --no-plugins -C viridian/algae install --with script
+          pip3 install poetry && poetry -C viridian/algae install --extras "bundle"
 
       - name: Deploy Caerulean Whirlpool 🚀
         env:
