--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -13,12 +13,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends python3-pip && 
 
 # Export dependencies to a `requirements.txt` install protobuf compiler.
 COPY viridian/algae/pyproject.toml ./
-RUN poetry install --without client,devel,setup
-RUN poetry export -f requirements.txt --with client,devel --without-hashes --output requirements.txt
+RUN poetry self add poetry-plugin-export && poetry install
+RUN poetry export -f requirements.txt --extras "client devel" --without-hashes --with-credentials --output requirements.txt && awk -F ';' '{print $1}' requirements.txt > reqs.txt
 
 # Copy protobuf files and generate python code.
 COPY vessels ./vessels
-RUN poetry run python3 -m grpc_tools.protoc -I=vessels --python_betterproto_out=. vessels/*.proto
+RUN poetry run python -m grpc_tools.protoc -I=vessels --python_betterproto_out=. vessels/*.proto
 
 
 FROM ubuntu:22.04 AS default
@@ -34,8 +34,8 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 # Install testing dependencies.
 RUN apt-get update && apt-get install -y --no-install-recommends build-essential iptables iproute2 iputils-ping dnsutils python3-pip && rm -rf /var/lib/apt/lists/*
-COPY --from=builder /seaside/algae/requirements.txt ./
-RUN pip install --upgrade --no-cache-dir pip -r requirements.txt
+COPY --from=builder /seaside/algae/reqs.txt ./
+RUN pip3 install --no-cache-dir -r reqs.txt
 
 # Copy algae and test sources, also copy generated protobuf files.
 COPY viridian/algae/sources/ ./sources/
