--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
           python-version: "3.10"
 
       - name: Install Dependencies 🔮
-        run: pip3 install poetry poethepoet[poetry_plugin] && poetry -C viridian/algae install --extras "test"
+        run: pip3 install poetry && poetry self add poethepoet && poetry -C viridian/algae install --extras "test"
 
       - name: Test Viridian Algae (unit) 🧪
         run: poetry -C viridian/algae poe test-unit
@@ -126,7 +126,7 @@ jobs:
           poetry -C viridian/algae install --without client,devel
 
       - name: Compile Installer Script 🏗️
-        run: poetry poe -C viridian/algae bundle
+        run: poetry -C viridian/algae run poe bundle
 
       - name: Run Installer Script 📥
         env:
