--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -98,6 +98,8 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
+        with:
+          submodules: true
 
       - name: Test Caerulean Whirlpool 🧪
         run: make test-whirlpool
