--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -50,7 +50,10 @@ jobs:
           python-version: "3.10"
 
       - name: Install Dependencies 🔮
-        run: pip3 install poetry && poetry install --extras "codestyle"
+        run: |
+          pip3 install poetry
+          poetry self add 'poethepoet[poetry_plugin]'
+          poetry install --extras "codestyle"
 
       - name: Lint Viridian Algae 🧪
         run: poetry -C viridian/algae run poe lint
@@ -64,6 +67,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+
+      - name: Install Dependencies 🔮
+        run: |
+          go install honnef.co/go/tools/cmd/staticcheck@latest
+          go install honnef.co/go/tools/cmd/structlayout@latest
 
       - name: Lint Caerulean Whirlpool 🧪
         run: make lint-whirlpool
