--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 name: TEST
-# TODO: fix 'pip3 install poetry' once windows issue is resolved: https://github.com/python-poetry/poetry/issues/10028
+# TODO: fix 'poetry self add ...' once windows issue is resolved: https://github.com/python-poetry/poetry/issues/10028
 # TODO: fix "npm --prefix" commands once the windows issue is finally resolved: https://github.com/npm/cli/issues/4511
 
 on:
@@ -24,7 +24,10 @@ jobs:
           python-version: "3.10"
 
       - name: Install Dependencies 🔮
-        run: pip3 install poetry && poetry self add poethepoet && poetry -C viridian/algae install --extras "test"
+        run: |
+          pip3 install poetry
+          poetry self add 'poethepoet[poetry_plugin]'
+          poetry -C viridian/algae install --extras "test"
 
       - name: Test Viridian Algae (unit) 🧪
         run: poetry -C viridian/algae poe test-unit
@@ -70,7 +73,9 @@ jobs:
       - name: Install Dependencies 🔮
         run: |
           cd .github/scripts && npm install && cd ../.. 
-          pip3 install poetry && poetry -C viridian/algae install --extras "setup"
+          pip3 install poetry
+          poetry self add 'poethepoet[poetry_plugin]'
+          poetry -C viridian/algae install --extras "setup"
 
       - name: Test Viridian Reef (unit) 🧪
         run: ${{ env.SUDO }} cargo test --package SeasideVPN-Reef --lib --manifest-path viridian/reef/Cargo.toml -- --nocapture --show-output
@@ -125,6 +130,7 @@ jobs:
       - name: Install Dependencies 🔮
         run: |
           pip3 install poetry
+          poetry self add 'poethepoet[poetry_plugin]'
           poetry -C viridian/algae install --extras "bundle setup"
 
       - name: Compile Installer Script 🏗️
