--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -71,6 +71,7 @@ jobs:
       - name: Install Dependencies 🔮
         run: |
           go install github.com/xlab/c-for-go@latest
+          go install github.com/pseusys/protogo@latest
           go install honnef.co/go/tools/cmd/staticcheck@latest
           go install honnef.co/go/tools/cmd/structlayout@latest
 
