--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,8 +59,8 @@ jobs:
     name: Build Caerulean Whirlpool Server Executable
     runs-on: ubuntu-latest
     env:
-      CC: ${{ matrix.arch == 'amd64' && 'arm-linux-gnueabi-gcc' || 'aarch64-linux-gnu-gcc' }}
-      CC_FOR_TARGET: ${{ matrix.arch == 'amd64' && 'arm-linux-gnueabi-gcc' || 'aarch64-linux-gnu-gcc' }}
+      CC: ${{ matrix.arch == 'amd64' && 'x86-64-linux-gnu-gcc' || 'aarch64-linux-gnu-gcc' }}
+      CC_FOR_TARGET: ${{ matrix.arch == 'amd64' && 'x86-64-linux-gnu-gcc' || 'aarch64-linux-gnu-gcc' }}
     strategy:
       fail-fast: false
       matrix:
@@ -73,7 +73,7 @@ jobs:
           submodules: true
 
       - name: Setup GCC 🐃
-        run: sudo apt-get install -y gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi
+        run: sudo apt-get install -y gcc-aarch64-linux-gnu gcc-x86-64-linux-gnu
 
       - name: Setup Go 1.22 🦫
         uses: actions/setup-go@v5
