--- a/caerulean/whirlpool/Makefile
+++ b/caerulean/whirlpool/Makefile
@@ -8,8 +8,10 @@ SHELL=/bin/bash
 PROTOGO_PROTOC_VERSION=24.4
 LINKING_FLAGS=""
 
-CGO_ENABLED=1
 GOOS=linux
+CGO_ENABLED=1
+CGO_CFLAGS=""
+CGO_LDFLAGS=""
 
 BOLD=\033[1m
 BLUE=\033[34m
