--- a/viridian/algae/docker/compose.integration.yml
+++ b/viridian/algae/docker/compose.integration.yml
@@ -2,22 +2,18 @@ name: seaside-algae-integration
 
 services:
   algae:
-    image: seaside-algae-default-routed
-    privileged: true
+    image: seaside-algae-integration
+    container_name: seaside-algae
+    extends:
+      file: compose.base.yml
+      service: algae
     build:
-      dockerfile: viridian/algae/docker/Dockerfile.algae
-      context: ../../..
-      target: default-routed
       args:
         NETWORK_GATEWAY: 10.65.0.100
-    env_file:
-      - test.conf.env
     environment:
-      SEASIDE_ROOT_CERTIFICATE_AUTHORITY: /seaside/viridian/ca/rootCA.crt
-      RESTRICTED_ADDRESS: 1.1.1.1
+      RESTRICTED_ADDRESS: 8.8.4.4
       SEASIDE_ADDRESS: 10.87.65.87
-    volumes:
-      - ../certificates/viridian:/seaside/viridian/ca:ro
+      VPN_COMMAND: python3 -m pytest --log-cli-level=$$LOGGING_LEVEL tests/test_integration_*.py
     networks:
       sea-client:
         ipv4_address: 10.65.0.65
@@ -28,14 +24,13 @@ services:
         condition: service_started
 
   router:
-    image: seaside-router-smoke-sleeping
+    image: seaside-router-integration
     extends:
       file: compose.base.yml
       service: router
     build:
       args:
-        RESTRICTED_ADDRESS: 1.1.1.1
-    container_name: seaside-internal-router
+        RESTRICTED_ADDRESS: 8.8.4.4
     networks:
       sea-client:
         ipv4_address: 10.65.0.100
