--- a/viridian/algae/docker/compose.local.yml
+++ b/viridian/algae/docker/compose.local.yml
@@ -2,7 +2,7 @@ name: seaside-algae-local
 
 services:
   algae:
-    image: seaside-algae-smoke-local
+    image: seaside-algae-local-main
     container_name: seaside-algae
     extends:
       file: compose.base.yml
@@ -26,7 +26,7 @@ services:
         condition: service_started
 
   algae-copy:
-    image: seaside-algae-smoke-local
+    image: seaside-algae-local-copy
     extends:
       file: compose.base.yml
       service: algae
@@ -53,10 +53,10 @@ services:
         condition: service_healthy
 
   int-router:
+    container_name: seaside-router-local-internal
     extends:
       file: compose.base.yml
       service: router
-    container_name: seaside-internal-router
     networks:
       sea-cli-int:
         ipv4_address: 10.65.0.100
@@ -81,10 +81,10 @@ services:
         ipv4_address: 10.87.42.87
 
   ext-router:
+    container_name: seaside-router-local-external
     extends:
       file: compose.base.yml
       service: router
-    container_name: seaside-external-router
     networks:
       sea-rout-ext:
         ipv4_address: 10.87.42.100
@@ -92,7 +92,7 @@ services:
         ipv4_address: 10.42.0.100
 
   echo:
-    image: seaside-echo
+    image: seaside-echo-local
     extends:
       file: compose.base.yml
       service: echo
@@ -105,10 +105,10 @@ services:
 
   disruptor:
     image: gaiaadm/pumba
-    container_name: network-disruptor
+    container_name: seaside-network-disruptor
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    command: "-l info netem -d 1h loss -p 25 seaside-internal-router seaside-external-router"
+    command: "-l info netem -d 1h loss -p 25 seaside-router-local-internal seaside-router-local-external"
     depends_on:
       int-router:
         condition: service_started
