integration testing ready

--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -63,6 +63,7 @@ client = [
 devel = [
     "pytest~=8.3.2",
     "pythonping~=1.1.4",
+    "dnspython~=2.7.0",
     "pytest-asyncio~=0.24.0",
     "pytest-timeout~=2.2.0",
     "pytest-dependency~=0.6.0"
