--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -3,7 +3,7 @@ name = "SeasideVPN-Algae"
 version = "0.0.3"
 description = "A testing SeasideVPN client and installation script for Linux"
 readme = "README.md"
-requires-python = ">=3.10,<3.13"
+requires-python = ">=3.11,<3.13"
 
 
 license-files = [
@@ -55,7 +55,7 @@ repository = "https://github.com/pseusys/SeasideVPN"
 client = [
     "colorama~=0.4.6",
     "pyroute2~=0.7.9",
-    "python-iptables~=1.0.1",
+    "python-iptables~=1.2.0",
     "betterproto~=2.0.0b6",
     "pymonocypher~=4.0.2.5"
 ]
@@ -64,8 +64,8 @@ devel = [
     "pytest~=8.3.2",
     "pythonping~=1.1.4",
     "dnspython~=2.7.0",
-    "pytest-asyncio~=0.24.0",
-    "pytest-timeout~=2.2.0",
+    "pytest-asyncio~=0.26.0",
+    "pytest-timeout~=2.3.1",
     "pytest-dependency~=0.6.0"
 ]
 
@@ -90,12 +90,15 @@ setup = [
 
 test = [
     "colorama~=0.4.6",
-    "python-on-whales~=0.74.0",
+    "python-on-whales~=0.76.1",
     "PyYAML~=6.0.2"
 ]
 
 protocol = [
-    "jupyter~=1.1.1"
+    "jupyter~=1.1.1",
+    "ipywidgets~=8.1.6",
+    "matplotlib~=3.10.1",
+    "scapy~=2.6.1"
 ]
 
 
