--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -98,7 +98,8 @@ protocol = [
     "jupyter~=1.1.1",
     "ipywidgets~=8.1.6",
     "matplotlib~=3.10.1",
-    "scapy~=2.6.1"
+    "scapy~=2.6.1",
+    "nbstripout~=0.8.1"
 ]
 
 
