--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM ubuntu:24.04 AS builder
+FROM ubuntu:24.10 AS builder
 
 WORKDIR /seaside/algae
 
@@ -9,19 +9,18 @@ ENV PYTHONDONTWRITEBYTECODE=1
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install python dependencies and build system.
-RUN apt-get update && apt-get install -y --no-install-recommends python3-pip && pip install --upgrade --no-cache-dir --break-system-packages poetry && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends python3-pip && pip install --upgrade --no-cache-dir --break-system-packages poetry poetry-plugin-export && rm -rf /var/lib/apt/lists/*
 
 # Export dependencies to a `requirements.txt` install protobuf compiler.
 COPY viridian/algae/pyproject.toml ./
-RUN poetry self add poetry-plugin-export && poetry install
-RUN poetry export -f requirements.txt --extras "client devel" --without-hashes --with-credentials --output requirements.txt && awk -F ';' '{print $1}' requirements.txt > reqs.txt
+RUN poetry install && poetry export -f requirements.txt --extras "client devel" --without-hashes --with-credentials --output requirements.txt && awk -F ';' '{print $1}' requirements.txt > reqs.txt
 
 # Copy protobuf files and generate python code.
 COPY vessels ./vessels
 RUN poetry run python -m grpc_tools.protoc -I=vessels --python_betterproto_out=. vessels/*.proto
 
 
-FROM ubuntu:24.04 AS default
+FROM ubuntu:24.10 AS default
 
 ARG RUNNING_IN_CI
 ARG RUNNING_TEST_FILE
