--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,14 +26,16 @@ jobs:
           python-version: "3.11"
 
       - name: Install Dependencies 🔮
+        working-directory: viridian/algae
         run: |
           pip3 install poetry
-          poetry -C viridian/algae install --extras "bundle"
+          poetry install --extras "bundle"
 
       - name: Build Caerulean Installer 📥
+        working-directory: viridian/algae
         env:
           EXEC_NAME: caerulean_installer
-        run: poetry -C viridian/algae run poe bundle ${{ env.EXEC_NAME }}.pyz
+        run: poetry run poe bundle ${{ env.EXEC_NAME }}.pyz
 
       - name: Create Artifact Name From Branch Name 🌱
         uses: mad9000/actions-find-and-replace-string@5
@@ -69,6 +71,7 @@ jobs:
           submodules: true
 
       - name: Setup GCC 🐃
+        working-directory: caerulean/whirlpool
         run: sudo apt-get install -y gcc-aarch64-linux-gnu gcc-x86-64-linux-gnu
 
       - name: Setup Go 1.22 🦫
@@ -77,17 +80,19 @@ jobs:
           go-version: "^1.22.0"
 
       - name: Install Dependencies 🔮
+        working-directory: caerulean/whirlpool
         run: |
           go install github.com/xlab/c-for-go@latest
           go install github.com/pseusys/protogo@latest
 
       - name: Build Caerulean Whirlpool 🏗️
+        working-directory: caerulean/whirlpool
         env:
           LINKING_FLAGS: -w -s
           GOARCH: ${{ matrix.arch }}
           CC: ${{ matrix.arch == 'amd64' && 'x86_64-linux-gnu-gcc' || 'aarch64-linux-gnu-gcc' }}
           EXEC_NAME: ${{ format('caerulean_whirlpool_executable-{0}', matrix.arch) }}
-        run: make -C caerulean/whirlpool build EXEC_NAME=${{ env.EXEC_NAME }}.run
+        run: make build EXEC_NAME=${{ env.EXEC_NAME }}.run
 
       - name: Create Artifact Name From Branch Name 🌱
         uses: mad9000/actions-find-and-replace-string@5
@@ -145,11 +150,12 @@ jobs:
           args: --release --features cli-exec --bin cli --manifest-path viridian/reef/Cargo.toml --target ${{ env.TARGET }}
 
       - name: Rename Executable 📛
+        working-directory: viridian/reef
         env:
           EXEC_SRC: ${{ matrix.os == 'linux' && 'cli' || 'cli.exe' }}
           EXEC_STEM: ${{ format('viridian-reef-executable-{0}-{1}', matrix.os, matrix.arch) }}
           EXEC_EXT: ${{ matrix.os == 'linux' && 'run' || 'exe' }}
-        run: mv viridian/reef/target/${{ env.TARGET }}/release/${{ env.EXEC_SRC }} viridian/reef/target/${{ env.EXEC_STEM }}.${{ env.EXEC_EXT }}
+        run: mv /target/${{ env.TARGET }}/release/${{ env.EXEC_SRC }} target/${{ env.EXEC_STEM }}.${{ env.EXEC_EXT }}
 
       - name: Create Artifact Name From Branch Name 🌱
         uses: mad9000/actions-find-and-replace-string@5
