--- a/viridian/algae/docker/Dockerfile.echo
+++ b/viridian/algae/docker/Dockerfile.echo
@@ -17,7 +17,7 @@ ENTRYPOINT ["python3", "echo_server.py"]
 HEALTHCHECK --interval=1m --timeout=1s --retries=3 --start-period=10s --start-interval=3s CMD netstat -tulpn | grep -q ":$ECHO_PORT"
 
 
-FROM seaside-echo-default AS default-routed
+FROM default AS default-routed
 
 ARG NETWORK_GATEWAY
 ENV ARG_NETWORK_GATEWAY=$NETWORK_GATEWAY
