--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -10,19 +10,26 @@ authors = [
 
 
 [dependencies]
+base64 = "^0.22.1"
 rand = "^0.8.5"
-prost = "^0.13.3"
 log = "^0.4.22"
 env_logger = "^0.11.5"
-prost-types = "^0.13.3"
-gethostname = "^0.5.0"
+gethostname = "1.0.2"
 chacha20poly1305 = "^0.10.1"
 simple-error = "^0.3.1"
 futures = "^0.3.31"
 ipnet = "^2.10.1"
+bincode = "^2.0.1"
+byte-pool = "^0.2.4"
+socket2 = "^0.5.9"
+num_enum = "^0.7.3"
+lazy_static = "1.5.0"
+blake2 = "^0.10.6"
+x25519-dalek = { version = "^2.0.1", features = ["static_secrets"] }
 tun = { version = "^0.7.1", features = ["async"] }
 tonic = { version = "^0.12.3", features = ["tls", "tls-webpki-roots"] }
-tokio = { version = "^1.41.0", features = ["macros", "rt-multi-thread", "process", "signal", "net"] }
+tokio = { version = "^1.44.2", features = ["macros", "rt-multi-thread", "process", "signal", "net"] }
+async-dropper = { version = "^0.3.1", features = [ "tokio", "simple" ] }
 structopt = { version = "^0.3.26", optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
@@ -33,10 +40,6 @@ nftables = "^0.5.0"
 windivert = { version = "^0.6.0", features = ["static"] }
 windows = { version = "^0.58.0", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }
 etherparse = { version = "^0.17.0" }
-
-[build-dependencies]
-tonic-build = "^0.12.3"
-protoc-prebuilt = "^0.3.0"
 
 [dev-dependencies]
 regex = "^1.11.1"
